# seerapi

./: .gitignore  README.md  mkdocs.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  release-python.yml  release-ts.yml
docs/: API参考.md  index.md  版本控制.md
docs/tutorial/: 1. 开始食用.md  2. 深入品尝.md  为什么需要SeerAPI.md  什么是API.md  前言.md
docs_src/tutorial/1.开始使用/: 001_py310.py
docs_src/tutorial/no_seerapi_get_skill_info/: effectInfo.json  main.py
scripts/: create_schema_db.py
seerapi/: _client.pyi  _model_map.py  _typing.py
src/client/: index.ts  sdk.gen.ts  transformers.gen.ts  types.gen.ts
src/db/: relations.ts
