[project]
name = "seerapi-monorepo"
version = "106.0.0"
description = "SeerAPI Monorepo"
requires-python = ">=3.10"

[tool.uv.workspace]
members = [
    "packages/seerapi-models",
    "packages/seerapi-python",
    "packages/solaris",
]

[dependency-groups]
tests = ["pytest>=9.0.1"]
docs = [
    "markdown-include-variants>=0.0.5",
    "mdx-include>=1.4.2",
    "mkdocs-git-revision-date-localized-plugin>=1.5.0",
    "mkdocs-material>=9.7.0",
    "pymdown-extensions>=10.17.1",
]
dev = [{ include-group = "tests" }, { include-group = "docs" }, "ruff>=0.13.0"]

[tool.pyright]
pythonVersion = "3.10"
pythonPlatform = "All"
typeCheckingMode = "standard"
reportShadowedImports = false
disableBytesTypePromotions = true

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = ["./scripts", "./docs", "./docs_src"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
line-ending = "lf"
docstring-code-format = false

[tool.ruff.lint]
select = [
    "F",     # Pyflakes
    "W",     # pycodestyle warnings
    "E",     # pycodestyle errors
    "UP",    # pyupgrade
    "ASYNC", # flake8-async
    "C4",    # flake8-comprehensions
    "T10",   # flake8-debugger
    "T20",   # flake8-print
    "PYI",   # flake8-pyi
    "PT",    # flake8-pytest-style
    "Q",     # flake8-quotes
    "I",     # isort
    "RUF",   # Ruff-specific rules
]
ignore = [
    "Q000",   # bad-quotes-inline-string
    "Q001",   # bad-quotes-multiline-string
    "Q002",   # bad-quotes-docstring
    "Q003",   # avoidable-escaped-quote
    "E402",   # module-import-not-at-top-of-file
    "UP037",  # quoted-annotation
    "RUF001", # ambiguous-unicode-character-string
    "RUF002", # ambiguous-unicode-character-docstring
    "RUF003", # ambiguous-unicode-character-comment
    "E501",   # line-too-long
]

[tool.ruff.lint.isort]
force-sort-within-sections = true
known-first-party = ["seerapi", "seerapi_models", "solaris"]
extra-standard-library = ["typing_extensions"]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false
